fix overflow en title y subtitle

--- a/blocks/profile/__profiledata/__profileinfo/__profileContenedorTitle/__profiletitle/__profiletitle.css
+++ b/blocks/profile/__profiledata/__profileinfo/__profileContenedorTitle/__profiletitle/__profiletitle.css
@@ -10,7 +10,7 @@
 
 @media (min-width: 768px) {
   .profile__title {
-    width: auto;
+    width: 320px;
     font-size: 34px;
   }
 }
