--- a/blocks/profile/__profiledata/__profileinfo/__profiloSubtitle/__profiloSubtitle.css
+++ b/blocks/profile/__profiledata/__profileinfo/__profiloSubtitle/__profiloSubtitle.css
@@ -1,6 +1,15 @@
 .profile__subtitle {
+  width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
   margin: 0;
+}
+@media (min-width: 768px){
+  .profile__subtitle{
+    width: 300px;
+  }  
 }
